--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "webpack",
+        "build": "rm -rf build && webpack",
         "start": "webpack-dev-server"
     },
     "keywords": [],
@@ -18,6 +18,8 @@
         "extract-text-webpack-plugin": "^3.0.2",
         "html-webpack-plugin": "^2.30.1",
         "image-webpack-loader": "^3.4.2",
+        "node-sass": "^4.7.2",
+        "sass-loader": "^6.0.6",
         "style-loader": "^0.19.1",
         "url-loader": "^0.6.2",
         "webpack": "^3.10.0",
