--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "rm -rf build && webpack",
+        "build": "rm -rf dist && NODE_ENV=production && webpack",
         "start": "webpack-dev-server"
     },
     "keywords": [],
@@ -14,6 +14,7 @@
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
         "css-loader": "^0.28.7",
         "extract-text-webpack-plugin": "^3.0.2",
         "html-webpack-plugin": "^2.30.1",
@@ -26,6 +27,8 @@
         "webpack-dev-server": "^2.9.7"
     },
     "dependencies": {
+        "express": "^4.16.2",
+        "mime-types": "^2.1.17",
         "react": "^16.2.0",
         "redux": "^3.7.2",
         "rimraf": "^2.6.2"
